cargo-features = ["edition2024"]

[package]
name = "noxical"
version = "0.1.0"
edition = "2021"
authors = ["TraverseTown"]
description = "Sample library in rust"
homepage = "https://github.com/noxbase/noxical-cli"
repository = "https://github.com/noxbase/noxical-cli"
readme = "README.md"
license = "MIT"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
notify-debouncer-full = "0.3.1"
regex = "1.5"
termcolor = "1.4.1"
walkdir = "2.5.0"
